--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,21 +1,11 @@
 <resources>
 
     <string name="app_name">Sis</string>
-    <string name="study_progress">学习</string>
-    <string name="test_score">成绩</string>
-    <string name="fee_pay">学费</string>
-    <string name="certificate_grant">证书</string>
-    <string name="more">更多</string>
-    <string name="timeStatistics">分时</string>
-    <string name="dateStatistics">日统计</string>
-    <string name="weekStatistics">周统计</string>
-    <string name="monthStatistics">月统计</string>
-    <string name="quarterStatistics">季度统计</string>
-    <string name="yearStatistics">年统计</string>
-    
-	<string name="add_values">Add values to the chart</string>    
-	<string name="x">X</string>    
-	<string name="y">Y</string>
-	<string name="add">Add</string>
-	<string name="new_series">New series</string>
+    <string name="user_name">用户名</string>
+    <string name="clear_data">清除数据记录</string>
+    <string name="exit">退出</string>
+
+    <string name="weijiece">微决策</string>
+    <string name="jizufuhe">机组负荷</string>
+
 </resources>
