--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
 
     <string name="app_name">Sis</string>
+    <string name="exit_app">再按一次退出应用</string>
     <string name="user_name">用户名</string>
     <string name="clear_data">清除数据记录</string>
     <string name="exit">退出</string>
