--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="fadianliang">发电量</string>
     <string name="fadianmeihao">发电煤耗</string>
     <string name="gongdianmeihao">供电煤耗</string>
+    <string name="zhibiaoliebiao">指标列表</string>
+    <string name="huanbaoshuju">环保数据</string>
 
 </resources>
